--- a/.github/workflows/dbt_production_daily.yml
+++ b/.github/workflows/dbt_production_daily.yml
@@ -9,11 +9,11 @@ jobs:
 
     env:
       SNOWFLAKE_ACCOUNT_ID: io08768.ap-southeast-1
-      SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
-      SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-      SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-      SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-      SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+      SNOWFLAKE_USERNAME: KKALYAN1
+      SNOWFLAKE_PASSWORD: Sandhyachitti123
+      SNOWFLAKE_ROLE: ACCOUNTADMIN
+      SNOWFLAKE_DATABASE: ANALYTICS
+      SNOWFLAKE_WAREHOUSE: TRANSFORMING
 
     steps:
     - name: Checkout repo
