--- a/profiles.yml
+++ b/profiles.yml
@@ -19,7 +19,7 @@ deploy_dbt_course:
       client_session_keep_alive: False
     prod:
       type: snowflake
-      account: la46900.us-east-2.aws
+      account: io08768.ap-southeast-1
 
       # User/password auth
       user: kkalyan1
